--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,6 @@
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
 
-# Swap the comments on the following lines if you wish to use zero-installs
-# In that case, don't forget to run `yarn config set enableGlobalCache false`!
-# Documentation here: https://yarnpkg.com/features/zero-installs
+# dependencies
+/node_modules
 
-#!.yarn/cache
-.pnp.*
+# misc
+.DS_Store
