--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
-  "name": "monster-maker",
-  "packageManager": "yarn@4.0.0-rc.43"
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
+  },
+  "scripts": {
+    "dev": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+  }
 }
